--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "order-book-swaps",
   "version": "1.0.0",
-  "main": "OrderProxy.js",
+  "main": "Proxy.js",
   "scripts": {
-    "start": "nodemon OrderProxy.js"
+    "start": "nodemon srs/microservises/Proxy.js",
+    "startBalanceMonitor": "nodemon srs/microservises/BalanceOrderMonitor.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.5",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "node-fetch": "^2.6.0",
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
